# sherpa

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  requirements-docs.txt
.github/skills/page-banners/: SKILL.md
.github/workflows/: docs.yml
camps/base-camp/: README.md  SETUP.md  pyproject.toml
camps/base-camp/exploits/: README.md  test_secure.py  test_vulnerable.py
camps/camp1-identity/: README.md  azure.yaml  pyproject.toml
camps/camp2-gateway/: README.md  azure.yaml
camps/camp2-gateway/servers/sherpa-mcp-server/: pyproject.toml
camps/camp2-gateway/servers/sherpa-mcp-server/src/: __init__.py  server.py
camps/camp2-gateway/servers/sherpa-mcp-server/src/sherpa_mcp_server.egg-info/: PKG-INFO  SOURCES.txt
camps/camp3-io-security/: README.md  azure.yaml
camps/camp3-io-security/servers/trail-api/: pyproject.toml
camps/camp3-io-security/servers/trail-api/src/: main.py  models.py
camps/camp3-io-security/servers/trail-api/src/routes/: permits.py
camps/camp4-monitoring/: README.md  azure.yaml
camps/camp4-monitoring/servers/sherpa-mcp-server/: pyproject.toml
camps/camp4-monitoring/servers/sherpa-mcp-server/src/: sanitizer.py  server.py
docs/: index.md  prerequisites.md  robots.txt
docs/camps/: base-camp.md  camp1-identity.md  camp2-gateway.md  camp3-io-security.md  camp4-monitoring.md  summit.md  trail-head.md
docs/camps/camp2-gateway/: index.md  (+4 more)
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/resources/: contributing.md  infrastructure.md  scripts.md
docs/stylesheets/: extra.css
infra/: README.md
scripts/: README.md
(+191 files in other folders)
