[project]
name = "sherpa-mcp-server"
version = "1.0.0"
description = "Sherpa MCP Server for mountain climbing assistance"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
