[project]
name = "sherpa-mcp-server"
version = "1.0.0"
description = "Sherpa MCP Server for mountain climbing assistance"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "uvicorn>=0.27.0",
    "azure-monitor-opentelemetry>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
